src/objects/RMA_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Default_Days_to_Complete_Return__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Default Days to Complete Return</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Case_Age__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Enter the maximum number of days old a case can be in order to create an RMA using the Create RMA button.  Compared to &quot;Created Date&quot;.</inlineHelpText>
        <label>Max Case Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Opportunity_Age__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Enter the maximum number of days old an opportunity can be and still have it be possible to create an RMA from the Create RMA button.  Compared to close date.</inlineHelpText>
        <label>Max Opportunity Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restocking_Fee__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Restocking Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>RMA Settings</label>
</CustomObject>